----------  JFREECHART 1.0.11 RELEASED ------------------------

2008-08-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/DateAxis.java
    (locale): New field,
    (DateAxis(String, TimeZone, Locale)): New constructor,
    (setTimeZone): Updated to use new locale field,
    (previousStandardDate): Likewise,
    (createStandardDateTickUnits(TimeZone)): Deprecated, 
    (createStandardDateTickUnits(TimeZone, Locale)): New method.
    
2008-09-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/ChartPanel.java
    (paintComponent): Modified chart buffer creation.

2008-09-18  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYShapeRenderer.java: New class,
    * tests/org/jfree/chart/renderer/xy/junit/XYShapeRendererTests.java:
    New tests,
    * tests/org/jfree/chart/renderer/xy/junit/RendererXYPackageTests.java
    (suite): Added XYShapeRendererTests.

2008-09-17  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYDataImageAnnotation.java:
    New class.

2008-09-17  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/PaintScaleLegend.java
    (PaintScaleLegend(PaintScale, ValueAxis)): Change axis range to reflect
    scale bounds.

2008-09-17  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/gantt/XYTaskDataset.java: New class,
    * tests/org/jfree/data/gantt/junit/DataGanttPackageTests.java
    (suite): Added XYTaskDatasetTests,
    * tests/org/jfree/data/gantt/junit/XYTaskDatasetTests.java: New file.

2008-09-16  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Day.java
    (Day(Date)): Use TimeZone.getDefault(),
    * source/org/jfree/data/time/Hour.java
    (Hour(Date)): Likewise,
    * source/org/jfree/data/time/Millisecond.java
    (Millisecond(Date)): Likewise,