@@ -54,6 +54,7 @@
  *               release (DG);
  * 02-Feb-2005 : Changed Spacer --> RectangleInsets for padding (DG);
  * 03-May-2005 : Fixed problem in equals() method (DG);
+ * 19-Sep-2008 : Added visibility flag (DG);
  *
  */
 
@@ -105,6 +106,13 @@ public abstract class Title extends AbstractBlock
     /** Default title padding. */
     public static final RectangleInsets DEFAULT_PADDING = new RectangleInsets(
             1, 1, 1, 1);
+
+    /**
+     * A flag that controls whether or not the title is visible.
+     *
+     * @since 1.0.11
+     */
+    public boolean visible;
 
     /** The title position. */
     private RectangleEdge position;
@@ -187,6 +195,7 @@ public abstract class Title extends AbstractBlock
             throw new IllegalArgumentException("Null 'spacer' argument.");
         }
 
+        this.visible = true;
         this.position = position;
         this.horizontalAlignment = horizontalAlignment;
         this.verticalAlignment = verticalAlignment;
@@ -196,6 +205,34 @@ public abstract class Title extends AbstractBlock
 
     }
 
+    /**
+     * Returns a flag that controls whether or not the title should be
+     * drawn.  The default value is <code>true</code>.
+     *
+     * @return A boolean.
+     *
+     * @see #setVisible(boolean)
+     *
+     * @since 1.0.11
+     */
+    public boolean isVisible() {
+        return this.visible;
+    }
+
+    /**
+     * Sets a flag that controls whether or not the title should be drawn, and
+     * sends a {@link TitleChangeEvent} to all registered listeners.
+     *
+     * @param visible  the new flag value.
+     *
+     * @see #isVisible()
+     *
+     * @since 1.0.11
+     */
+    public void setVisible(boolean visible) {
+        this.visible = visible;
+        notifyListeners(new TitleChangeEvent(this));
+    }
     /**
      * Returns the position of the title.
      *
@@ -377,10 +414,10 @@ public abstract class Title extends AbstractBlock
         if (!(obj instanceof Title)) {
             return false;
         }
-        if (!super.equals(obj)) {
+        Title that = (Title) obj;
+        if (this.visible != that.visible) {
             return false;
         }
-        Title that = (Title) obj;
         if (this.position != that.position) {
             return false;
         }
@@ -393,7 +430,7 @@ public abstract class Title extends AbstractBlock
         if (this.notify != that.notify) {
             return false;
         }
-        return true;
+        return super.equals(obj);
     }
 
     /**
