@@ -1,5 +1,15 @@
 ----------  JFREECHART 1.0.11 RELEASED ------------------------
 
+2008-09-19  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/JFreeChart.java
+    (draw): Check title visibility,
+    * source/org/jfree/chart/title/Title.java
+    (visible): New field,
+    (isVisible): New method,
+    (setVisible): Likewise,
+    (equals): Check visible flag.
+    
 2008-08-18  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/axis/DateAxis.java
